--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+_gsdata_/2015-0413-121242-S117503-T0450F-Google Drive - Workspace.log
+_gsdata_/2015-0414-174926-S117503-T0450F-Google Drive - Workspace.log
+_gsdata_/2015-0415-164556-S117503-T0450F-Google Drive - Workspace.log
+_gsdata_/_cleanup.gss
+_gsdata_/_file_state_v4._gs
+_gsdata_/_insync_v4.gsl
+/_gsdata_/
